add JGroups logic

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>main.Node</mainClass>
+                                    <mainClass>main.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
