--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>main</groupId>
+    <groupId>app</groupId>
     <artifactId>LamportCLocks</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -17,15 +17,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.jgroups/jgroups -->
-        <dependency>
-            <groupId>org.jgroups</groupId>
-            <artifactId>jgroups</artifactId>
-            <version>4.0.0.Final</version>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
@@ -43,7 +34,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>main.App</mainClass>
+                                    <mainClass>app.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
